--- a/Front/package.json
+++ b/Front/package.json
@@ -7,12 +7,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.1",
+    "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
